2 ( game page added )

--- a/game.html
+++ b/game.html
@@ -4,20 +4,12 @@
         <meta charset="UTF-8">
         <meta http-equiv="X-UA-Compatible" content="IE=edge">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
-        <title>Sunete</title>
+        <title>Super Bacovia</title>
         <link rel="icon" type="image/x-icon" href="./assets/images/favicon.ico">
-        <link rel="stylesheet" href="./assets/styles/style.css">
-        <script src="./assets/scripts/script.js" defer></script>
+        <link rel="stylesheet" href="./assets/styles/game.css">
+        <script src="./assets/scripts/game.js" defer></script>
     </head>
     <body>
-        <header>
-            <a href="./game.html">game -></a>
-        </header>
-        <main>
-
-        </main>
-        <footer>
-
-        </footer>
+        <a href="./index.html">Home</a>
     </body>
 </html>
