3 ( upper section added )

--- a/index.html
+++ b/index.html
@@ -11,13 +11,42 @@
     </head>
     <body>
         <header>
-            <a href="./game.html">game -></a>
+            <a href="./game.html" id="gameLink">Game</a>
         </header>
         <main>
+            <section class="upper-section">
+                <img src="./assets/images/background.jpg" alt="background" id="background">
+                <img src="./assets/images/skull.png" alt="skull" id="skull">
+            </section>
+            <section class="content-section">
 
+            </section>
         </main>
         <footer>
-
+            <p>Website made by <a href="https://www.instagram.com/__dani.web__/" target="_blank" rel="noopener">Dani</a></p>
+            <ul>
+                <li>
+                    Echipa formata din:
+                </li>
+                <li>
+                    Vasinc Daniel
+                </li>
+                <li>
+                    Badila Mihai Alexandru
+                </li>
+                <li>
+                    Suciu Eduard
+                </li>
+                <li>
+                    Suciu Vlad
+                </li>
+                <li>
+                    Moldovan Robert
+                </li>
+                <li>
+                    Spiridon Maria
+                </li>
+            </ul>
         </footer>
     </body>
 </html>
