4 ( content section added )

--- a/index.html
+++ b/index.html
@@ -19,7 +19,56 @@
                 <img src="./assets/images/skull.png" alt="skull" id="skull">
             </section>
             <section class="content-section">
-
+                <div class="cards">
+                    <div class="card card-left" id="card-left">
+                        <p>
+                            Lorem ipsum dolor sit, amet consectetur adipisicing elit. Aspernatur nulla quo sequi sunt accusantium repudiandae eaque laborum, suscipit obcaecati excepturi.
+                        </p>
+                        <span class="circle">.</span>
+                    </div>
+                    <div class="card card-right" id="card-right">
+                        <p>
+                            Lorem ipsum dolor sit, amet consectetur adipisicing elit. Aspernatur nulla quo sequi sunt accusantium repudiandae eaque laborum, suscipit obcaecati excepturi.
+                        </p>
+                        <!-- <span class="circle circle-right"></span> -->
+                    </div>
+                    <div class="card card-left">
+                        <p>
+                            Lorem ipsum dolor sit, amet consectetur adipisicing elit. Aspernatur nulla quo sequi sunt accusantium repudiandae eaque laborum, suscipit obcaecati excepturi.
+                        </p>
+                        <span class="circle">.</span>
+                    </div>
+                    <div class="card card-right">
+                        <p>
+                            Lorem ipsum dolor sit, amet consectetur adipisicing elit. Aspernatur nulla quo sequi sunt accusantium repudiandae eaque laborum, suscipit obcaecati excepturi.
+                        </p>
+                        <!-- <span class="circle circle-right"></span> -->
+                    </div>
+                    <div class="card card-left">
+                        <p>
+                            Lorem ipsum dolor sit, amet consectetur adipisicing elit. Aspernatur nulla quo sequi sunt accusantium repudiandae eaque laborum, suscipit obcaecati excepturi.
+                        </p>
+                        <span class="circle">.</span>
+                    </div>
+                    <div class="card card-right">
+                        <p>
+                            Lorem ipsum dolor sit, amet consectetur adipisicing elit. Aspernatur nulla quo sequi sunt accusantium repudiandae eaque laborum, suscipit obcaecati excepturi.
+                        </p>
+                        <!-- <span class="circle  circle-right"></span> -->
+                    </div>
+                    <div class="card card-left">
+                        <p>
+                            Lorem ipsum dolor sit, amet consectetur adipisicing elit. Aspernatur nulla quo sequi sunt accusantium repudiandae eaque laborum, suscipit obcaecati excepturi.
+                        </p>
+                        <span class="circle">.</span>
+                    </div>
+                    <div class="card card-right">
+                        <p>
+                            Lorem ipsum dolor sit, amet consectetur adipisicing elit. Aspernatur nulla quo sequi sunt accusantium repudiandae eaque laborum, suscipit obcaecati excepturi.
+                        </p>
+                        <!-- <span class="circle circle-right"></span> -->
+                    </div>
+                </div>
             </section>
         </main>
         <footer>
