--- a/game.html
+++ b/game.html
@@ -10,6 +10,57 @@
         <script src="./assets/scripts/game.js" defer></script>
     </head>
     <body>
-        <a href="./index.html">Home</a>
+        <div class="backdrop"></div>
+        <div class="shopUI">
+            <h2>
+                Shop
+            </h2>
+        </div>
+        <div class="statsUI">
+            <h2>
+                Stats
+            </h2>
+        </div>
+        <div class="content-game">
+            <div class="upper-section">
+                <div class="upper-section__left">
+                    <div class="currency">
+                        <span class="money">
+                            0
+                        </span>
+                        $</div>
+                    <div class="fame">0</div>
+                </div>
+                <div class="upper-section__right">
+                    <div class="concert">
+                        Organize concert
+                    </div>
+                    <div class="buttons">
+                        <button id="shop-button">
+                            SHOP
+                        </button>
+                        <button id="stats-button">
+                            STATS
+                        </button>
+                    </div>
+                </div>
+            </div>
+            <div class="middle-section">
+                <img src="./assets/images/speaker.svg" alt="speaker" id="speaker">
+                <div class="character-container">
+                    <img src="./assets/images/bvcovia.png" alt="bvcovia" id="bvcovia">
+                    <span class="bvcovia_text"></span>
+                </div>
+                <img src="./assets/images/microphone.svg" alt="microphone" id="microphone">
+                <div class="persons">
+                    <div class="person">
+                        <img src="./assets/images/stickman.svg" alt="stickman" class="stickman">
+                    </div>
+                </div>
+            </div>
+            <div class="floor-section">
+            </div>
+        </div>
+        <!-- <a href="./index.html">Home</a> -->
     </body>
 </html>
