--- a/game.html
+++ b/game.html
@@ -15,11 +15,75 @@
             <h2>
                 Shop
             </h2>
+            <div class="options">
+                <div class="option">
+                    <p>Microphone</p>
+                    <div class="levels">
+                        <div class="min-level">
+                            0
+                        </div>
+                        <div class="max-level">
+                            15
+                        </div>
+                    </div>
+
+                    <button>300</button>
+                </div>
+
+                <div class="option">
+                    <p>Speaker</p>
+                    <div class="levels">
+                        <div class="min-level">
+                            0
+                        </div>
+                        <div class="max-level">
+                            10
+                        </div>
+                    </div>
+                    <button>500</button>
+                </div>
+
+                <div class="option">
+                    <p>Voice</p>
+                    <div class="levels">
+                        <div class="min-level">
+                            0
+                        </div>
+                        <div class="max-level">
+                            25
+                        </div>
+                    </div>
+                    <button>50</button>
+                </div>
+
+            </div>
         </div>
         <div class="statsUI">
             <h2>
                 Stats
             </h2>
+            <div class="stats">
+                <div class="stat">
+                    <p>
+                        Vei face intre <span class="stat__min-money_sing"></span> - <span class="stat__max-money_sing"></span>$ pe cantat
+                    </p>
+                </div>
+                <div class="stat">
+                    <p>
+                        Vei face intre <span class="stat__min-money_concert"></span> - <span class="stat__max-money_concert"></span>$ pe concert
+                    </p>
+                </div>
+                <div class="stat">
+                    <p>
+                        Vei atrage <span class="stat__fame-sign"></span> fani pe cantat
+                    </p>
+                </div>
+                <div class="stat">
+                    <p>
+                        Vei atrage <span class="stat__fame-concert"></span> fani pe concert
+                    </p>
+                </div>
+            </div>
         </div>
         <div class="content-game">
             <div class="upper-section">
