--- a/game.html
+++ b/game.html
@@ -4,7 +4,7 @@
         <meta charset="UTF-8">
         <meta http-equiv="X-UA-Compatible" content="IE=edge">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
-        <title>Super Bacovia</title>
+        <title>Bacovia</title>
         <link rel="icon" type="image/x-icon" href="./assets/images/favicon.ico">
         <link rel="stylesheet" href="./assets/styles/game.css">
         <script src="./assets/scripts/game.js" defer></script>
