--- a/index.html
+++ b/index.html
@@ -40,13 +40,25 @@
                     </div>
                     <div class="card card-right">
                         <p>
-                            În opera “Plumb”, scârțâitul nu aduce deloc un aer natural în acest peisaj, fiind un simbol al distrugerii treptate a universului, marcată printr-o imagine auditivă: “Și scârțâiau coroanele de plumb”. În egală măsură, sonoritățile sumbre din cadrul poemului sunt dublate la nivel semantic și prin aglomerarea de consoane „dure”: b, p, m, n, s, ș, t, ț. De altfel, la nivel prozodic, ritmul iambic, alături de rima îmbrățișată și măsura fixă de zece silabe contureaza perfect dimensiunea confesivă a textului liric, sugerând prezența morții.
+                            În opera “Plumb”, scârțâitul nu aduce deloc un aer natural în acest peisaj, fiind un simbol al distrugerii treptate a universului, marcată printr-o imagine auditivă: “Și scârțâiau coroanele de plumb”. În egală măsură, sonoritățile sumbre din cadrul poemului sunt dublate la nivel semantic și prin aglomerarea de consoane „dure”: b, p, m, n, s, ș, t, ț.
                         </p>
                         <!-- <span class="circle circle-right"></span> -->
                     </div>
                     <div class="card card-left">
                         <p>
-                            În opera “Lacustră”, imaginile auditive “aud plouând” și “aud materia plângând” permanentizează axa temporală a acţiunii şi induce mişcarea descensională specifică degradării materiale şi spirituale. Astfel, folosirea repetată a verbului “aud”, conferă imaginii poetice o dimensiune auditivă, plânsul lăuntric devenind plânsul întregului univers. De altfel, din punct de vedere fonetic, frecvența vocalelor a, o, u, sugerează bocetul universal, precum și tristețea metafizică. Prozodia din prima și ultima strofă joacă și ea un rol important în susținerea muzicalității creației literare, căci monorima prezentă la acest nivel se realizează prin intermediul silabei “-ând”, ce sugerează pregnant atmosfera melancolică ce caracterizează poezia.
+                            De altfel, la nivel prozodic, ritmul iambic, alături de rima îmbrățișată și măsura fixă de zece silabe contureaza perfect dimensiunea confesivă a textului liric, sugerând prezența morții.
+                        </p>
+                        <span class="circle">.</span>
+                    </div>
+                    <div class="card card-right">
+                        <p>
+                            În opera “Lacustră”, imaginile auditive “aud plouând” și “aud materia plângând” permanentizează axa temporală a acţiunii şi induce mişcarea descensională specifică degradării materiale şi spirituale. Astfel, folosirea repetată a verbului “aud”, conferă imaginii poetice o dimensiune auditivă, plânsul lăuntric devenind plânsul întregului univers.
+                        </p>
+                        <!-- <span class="circle  circle-right"></span> -->
+                    </div>
+                    <div class="card card-left">
+                        <p>
+                            De altfel, din punct de vedere fonetic, frecvența vocalelor a, o, u, sugerează bocetul universal, precum și tristețea metafizică. Prozodia din prima și ultima strofă joacă și ea un rol important în susținerea muzicalității creației literare, căci monorima prezentă la acest nivel se realizează prin intermediul silabei “-ând”, ce sugerează pregnant atmosfera melancolică ce caracterizează poezia.
                         </p>
                         <span class="circle">.</span>
                     </div>
@@ -54,19 +66,7 @@
                         <p>
                             Spre deosebire de operele reprezentate mai sus, care conțin o multitudine de imagini auditive și o diversitate sonoră, poezia “Zgomote” are tocmai un titlu sugestiv, conturând ecoul din subconștientul eului liric. 
                         </p>
-                        <!-- <span class="circle  circle-right"></span> -->
                     </div>
-                    <!-- <div class="card card-left">
-                        <p>
-                            Lorem ipsum dolor sit, amet consectetur adipisicing elit. Aspernatur nulla quo sequi sunt accusantium repudiandae eaque laborum, suscipit obcaecati excepturi.
-                        </p>
-                        <span class="circle">.</span>
-                    </div>
-                    <div class="card card-right">
-                        <p>
-                            Lorem ipsum dolor sit, amet consectetur adipisicing elit. Aspernatur nulla quo sequi sunt accusantium repudiandae eaque laborum, suscipit obcaecati excepturi.
-                        </p>
-                    </div> -->
                 </div>
             </section>
         </main>
