--- a/game.html
+++ b/game.html
@@ -11,6 +11,9 @@
     </head>
     <body>
         <div class="backdrop"></div>
+        <div class="concertUI">
+            <p class="concert-text">CONCERTUL ARE LOC ACUM...</p>
+        </div>
         <div class="shopUI">
             <h2>
                 Shop
@@ -98,6 +101,9 @@
                 <div class="upper-section__right">
                     <div class="concert">
                         Organize concert
+                        <span class="concert__info">
+                            Pentru a organiza un concert ai nevoie de <span class="concert__info-number">10000</span> de fani.
+                        </span>
                     </div>
                     <div class="buttons">
                         <button id="shop-button">
