9 ( hole content changed )

--- a/game.html
+++ b/game.html
@@ -4,133 +4,43 @@
         <meta charset="UTF-8">
         <meta http-equiv="X-UA-Compatible" content="IE=edge">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
-        <title>Bacovia</title>
+        <title>Game</title>
         <link rel="icon" type="image/x-icon" href="./assets/images/favicon.ico">
         <link rel="stylesheet" href="./assets/styles/game.css">
         <script src="./assets/scripts/game.js" defer></script>
     </head>
     <body>
-        <div class="backdrop"></div>
-        <div class="concertUI">
-            <p class="concert-text">CONCERTUL ARE LOC ACUM...</p>
-        </div>
-        <div class="shopUI">
-            <h2>
-                Shop
-            </h2>
-            <div class="options">
-                <div class="option">
-                    <p>Microphone</p>
-                    <div class="levels">
-                        <div class="min-level">
-                            0
-                        </div>
-                        <div class="max-level">
-                            15
-                        </div>
-                    </div>
+        <header>
+            <a href="./index.html">Home</a>
+        </header>
+        <main>
 
-                    <button>300</button>
-                </div>
-
-                <div class="option">
-                    <p>Speaker</p>
-                    <div class="levels">
-                        <div class="min-level">
-                            0
-                        </div>
-                        <div class="max-level">
-                            10
-                        </div>
-                    </div>
-                    <button>500</button>
-                </div>
-
-                <div class="option">
-                    <p>Voice</p>
-                    <div class="levels">
-                        <div class="min-level">
-                            0
-                        </div>
-                        <div class="max-level">
-                            25
-                        </div>
-                    </div>
-                    <button>50</button>
-                </div>
-
-            </div>
-        </div>
-        <div class="statsUI">
-            <h2>
-                Stats
-            </h2>
-            <div class="stats">
-                <div class="stat">
-                    <p>
-                        Vei face intre <span class="stat__min-money_sing"></span> - <span class="stat__max-money_sing"></span>$ pe cantat
-                    </p>
-                </div>
-                <div class="stat">
-                    <p>
-                        Vei face intre <span class="stat__min-money_concert"></span> - <span class="stat__max-money_concert"></span>$ pe concert
-                    </p>
-                </div>
-                <div class="stat">
-                    <p>
-                        Vei atrage <span class="stat__fame-sign"></span> fani pe cantat
-                    </p>
-                </div>
-                <div class="stat">
-                    <p>
-                        Vei atrage <span class="stat__fame-concert"></span> fani pe concert
-                    </p>
-                </div>
-            </div>
-        </div>
-        <div class="content-game">
-            <div class="upper-section">
-                <div class="upper-section__left">
-                    <div class="currency">
-                        <span class="money">
-                            0
-                        </span>
-                        $</div>
-                    <div class="fame">0</div>
-                </div>
-                <div class="upper-section__right">
-                    <div class="concert">
-                        Organize concert
-                        <span class="concert__info">
-                            Pentru a organiza un concert ai nevoie de <span class="concert__info-number">10000</span> de fani.
-                        </span>
-                    </div>
-                    <div class="buttons">
-                        <button id="shop-button">
-                            SHOP
-                        </button>
-                        <button id="stats-button">
-                            STATS
-                        </button>
-                    </div>
-                </div>
-            </div>
-            <div class="middle-section">
-                <img src="./assets/images/speaker.svg" alt="speaker" id="speaker">
-                <div class="character-container">
-                    <img src="./assets/images/bvcovia.png" alt="bvcovia" id="bvcovia">
-                    <span class="bvcovia_text"></span>
-                </div>
-                <img src="./assets/images/microphone.svg" alt="microphone" id="microphone">
-                <div class="persons">
-                    <div class="person">
-                        <img src="./assets/images/stickman.svg" alt="stickman" class="stickman">
-                    </div>
-                </div>
-            </div>
-            <div class="floor-section">
-            </div>
-        </div>
-        <!-- <a href="./index.html">Home</a> -->
+        </main>
+        <footer>
+            <p>Website made by <a href="https://www.instagram.com/__dani.web__/" target="_blank" rel="noopener">Dani</a></p>
+            <ul>
+                <li>
+                    Echipa formata din:
+                </li>
+                <li>
+                    Vasinc Daniel
+                </li>
+                <li>
+                    Badila Mihai Alexandru
+                </li>
+                <li>
+                    Suciu Eduard
+                </li>
+                <li>
+                    Suciu Vlad
+                </li>
+                <li>
+                    Moldovan Robert
+                </li>
+                <li>
+                    Spiridon Maria
+                </li>
+            </ul>
+        </footer>
     </body>
 </html>
