--- a/index.html
+++ b/index.html
@@ -1,100 +1,113 @@
 <!DOCTYPE html>
-    <html lang="en">
-    <head>
-        <meta charset="UTF-8">
-        <meta http-equiv="X-UA-Compatible" content="IE=edge">
-        <meta name="viewport" content="width=device-width, initial-scale=1.0">
-        <title>Sunete</title>
-        <link rel="icon" type="image/x-icon" href="./assets/images/favicon.ico">
-        <link rel="stylesheet" href="./assets/styles/style.css">
-        <script src="./assets/scripts/script.js" defer></script>
-    </head>
-    <body>
-        <header>
-            <a href="./game.html" id="gameLink">Game</a>
-        </header>
-        <main>
-            <section class="upper-section">
-                <img src="./assets/images/background.jpg" alt="background" id="background">
-                <img src="./assets/images/skull.png" alt="skull" id="skull">
-            </section>
-            <section class="content-section">
-                <div class="cards">
-                    <div class="card card-left" id="card-left">
-                        <p>
-                            Simbolismul este o paradigmă culturală, un curent literar, manifestat la începutul secolului al XX-lea, punctul de iradiere fiind Franța. Promotorul simbolismului este  Jean Moréas, în articolul-program intitulat “Simbolismul”. În literatura universală, acest curent literar este anunțat de Charles Baudelaire cu poezia “Florile răului”. Reprezentanții universali sunt Verlaine, Rimbaud și Mallarmé. 
-                        </p>
-                        <span class="circle">.</span>
-                    </div>
-                    <div class="card card-right" id="card-right">
-                        <p>
-                            George Bacovia este o personalitate emblematică a liricii interbelice, fiind reprezentantul simbolismului autentic românesc. Este autorul unor volume de versuri și proză scrise în baza unei tehnici unice în literatura română, cu vădite influențe din marii lirici moderni francezi sau germani pe care-i admira "din Heine și Lenau." Fiind o personalitate emotivă și introvertită, Bacovia era vazut drept "o bisericuță dintr-un lemn" (E. Lovinescu).
-                        </p>
-                        <!-- <span class="circle circle-right"></span> -->
-                    </div>
-                    <div class="card card-left">
-                        <p>
-                            Sunetele din opera bacoviană conferă muzicalitate și sensibilitate textului, aducând o atmosferă sumbră, rece, mortuară.
-                        </p>
-                        <span class="circle">.</span>
-                    </div>
-                    <div class="card card-right">
-                        <p>
-                            În opera “Plumb”, scârțâitul nu aduce deloc un aer natural în acest peisaj, fiind un simbol al distrugerii treptate a universului, marcată printr-o imagine auditivă: “Și scârțâiau coroanele de plumb”. În egală măsură, sonoritățile sumbre din cadrul poemului sunt dublate la nivel semantic și prin aglomerarea de consoane „dure”: b, p, m, n, s, ș, t, ț.
-                        </p>
-                        <!-- <span class="circle circle-right"></span> -->
-                    </div>
-                    <div class="card card-left">
-                        <p>
-                            De altfel, la nivel prozodic, ritmul iambic, alături de rima îmbrățișată și măsura fixă de zece silabe contureaza perfect dimensiunea confesivă a textului liric, sugerând prezența morții.
-                        </p>
-                        <span class="circle">.</span>
-                    </div>
-                    <div class="card card-right">
-                        <p>
-                            În opera “Lacustră”, imaginile auditive “aud plouând” și “aud materia plângând” permanentizează axa temporală a acţiunii şi induce mişcarea descensională specifică degradării materiale şi spirituale. Astfel, folosirea repetată a verbului “aud”, conferă imaginii poetice o dimensiune auditivă, plânsul lăuntric devenind plânsul întregului univers.
-                        </p>
-                        <!-- <span class="circle  circle-right"></span> -->
-                    </div>
-                    <div class="card card-left">
-                        <p>
-                            De altfel, din punct de vedere fonetic, frecvența vocalelor a, o, u, sugerează bocetul universal, precum și tristețea metafizică. Prozodia din prima și ultima strofă joacă și ea un rol important în susținerea muzicalității creației literare, căci monorima prezentă la acest nivel se realizează prin intermediul silabei “-ând”, ce sugerează pregnant atmosfera melancolică ce caracterizează poezia.
-                        </p>
-                        <span class="circle">.</span>
-                    </div>
-                    <div class="card card-right">
-                        <p>
-                            Spre deosebire de operele reprezentate mai sus, care conțin o multitudine de imagini auditive și o diversitate sonoră, poezia “Zgomote” are tocmai un titlu sugestiv, conturând ecoul din subconștientul eului liric. 
-                        </p>
-                    </div>
-                </div>
-            </section>
-        </main>
-        <footer>
-            <p>Website made by <a href="https://www.instagram.com/__dani.web__/" target="_blank" rel="noopener">Dani</a></p>
-            <ul>
+<html lang="en">
+
+<head>
+    <meta charset="UTF-8">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Home</title>
+    <link rel="icon" type="image/x-icon" href="./assets/images/favicon.ico">
+    <link rel="stylesheet" href="./assets/styles/style.css">
+    <script src="./assets/scripts/script.js" defer></script>
+</head>
+
+<body>
+    <div class="backdrop"></div>
+    <header>
+        <div class="navbar">
+            <a href="./index.html" id="home">Home</a>
+            <ul class="links">
                 <li>
-                    Echipa formata din:
+                    <a href="#section1" class="link">
+                        Section 1
+                    </a>
                 </li>
                 <li>
-                    Vasinc Daniel
+                    <a href="#section2" class="link">
+                        Section 2
+                    </a>
                 </li>
                 <li>
-                    Badila Mihai Alexandru
+                    <a href="#section3" class="link">
+                        Section 3
+                    </a>
                 </li>
                 <li>
-                    Suciu Eduard
+                    <a href="#section4" class="link">
+                        Section 4
+                    </a>
                 </li>
                 <li>
-                    Suciu Vlad
+                    <a href="#section5" class="link">
+                        Section 5
+                    </a>
                 </li>
                 <li>
-                    Moldovan Robert
-                </li>
-                <li>
-                    Spiridon Maria
+                    <a href="./game.html">
+                        Game
+                    </a>
                 </li>
             </ul>
-        </footer>
-    </body>
+            <div class="burger-menu">
+                <span></span>
+                <span></span>
+                <span></span>
+            </div>
+        </div>
+        <div class="theater">
+            <img src="./assets/images/bacovia.png" alt="bacovia">
+        </div>
+    </header>
+    <main>
+        <div class="definitions-section">
+            Definitii
+        </div>
+        <section id="section1">
+            Section 1
+        </section>
+
+        <section id="section2">
+            Section 2
+        </section>
+
+        <section id="section3">
+            Section 3
+        </section>
+
+        <section id="section4">
+            Section 4
+        </section>
+
+        <section id="section5">
+            Section 5
+        </section>
+    </main>
+    <footer>
+        <p>Website made by <a href="https://www.instagram.com/__dani.web__/" target="_blank" rel="noopener">Dani</a></p>
+        <ul>
+            <li>
+                Echipa formata din:
+            </li>
+            <li>
+                Vasinc Daniel
+            </li>
+            <li>
+                Badila Mihai Alexandru
+            </li>
+            <li>
+                Suciu Eduard
+            </li>
+            <li>
+                Suciu Vlad
+            </li>
+            <li>
+                Moldovan Robert
+            </li>
+            <li>
+                Spiridon Maria
+            </li>
+        </ul>
+    </footer>
+</body>
+
 </html>
