--- a/game.html
+++ b/game.html
@@ -14,7 +14,30 @@
             <a href="./index.html">Home</a>
         </header>
         <main>
-
+            <div class="story">
+                <p class="story-title">
+                    
+                </p>
+            </div>
+            <div class="options">
+                <div class="options-row">
+                    <div class="option">
+                        <!-- <img src="./assets/images/sound.png" alt="Sound image"> -->
+                    </div>
+                    <div class="option">
+                        <!-- <img src="./assets/images/sound.png" alt="Sound image"> -->
+                    </div>
+                </div>
+                <div class="options-row">
+                    <div class="option">
+                        <!-- <img src="./assets/images/sound.png" alt="Sound image"> -->
+                    </div>
+                    <div class="option">
+                        <!-- <img src="./assets/images/sound.png" alt="Sound image"> -->
+                    </div>
+                </div>
+            </div>
+            <button id="generator-button">Generate</button>
         </main>
         <footer>
             <p>Website made by <a href="https://www.instagram.com/__dani.web__/" target="_blank" rel="noopener">Dani</a></p>
